# fastapi-student-managment

./: .env.example  .gitignore  main.py  passenger_wsgi.py  pyproject.toml  requirements.txt  requirments.txt  seeder.py  test.py
app/: auth.py  database.py
app/chatbot/: agent.py  config.py  prompt.py
app/chatbot/tools/: __init__.py  student.py  teacher.py
app/models/: attendance.py  subject.py  user.py
app/routers/: attendance.py  authentication.py  chat.py  student.py  subject.py  teacher.py
app/schemas/: attendance.py  chat.py  subject.py  user.py
