[project]
name = "sms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt<5",
    "fastapi[standard]>=0.137.1",
    "langchain>=1.3.14",
    "langchain-openrouter>=0.2.6",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.13.0",
    "pymysql>=1.2.0",
    "sqlalchemy>=2.0.51",
]
